# itsbinotstraight

./: .env.template  .gitignore  Cargo.toml  DEPLOYING.md  Makefile  README.md  biwords  deploy  index.js  itsbinotstraight.service  make-biwords-from-enwiktionary  make-biwords-from-file  make-image  mkosi.build  mkosi.default  mkosi.postinst  package-lock.json  package.json  tweet.js
.github/workflows/: test.yaml
src/: lib.rs  main.rs
units/: itsbinotstraight.service  itsbinotstraight.timer
units.js/: itsbinotstraight.timer
