[package]
name = "itsbinotstraight"
version = "0.1.0"
authors = ["Lucas Werkmeister <mail@lucaswerkmeister.de>"]
edition = "2021"
homepage = "https://twitter.com/ItsBiNotHetero"
repository = "https://github.com/lucaswerkmeister/itsbinotstraight/"
license = "AGPL-3.0-or-later"
default-run = "itsbinotstraight"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.7"
rust_twitter_bot_lib = "0.1.2"
unicode-normalization = "0.1.12"
