[package]
name = "itsbinotstraight"
version = "0.1.0"
authors = ["Lucas Werkmeister <mail@lucaswerkmeister.de>"]
edition = "2021"
homepage = "https://twitter.com/ItsBiNotHetero"
repository = "https://github.com/lucaswerkmeister/itsbinotstraight/"
license = "AGPL-3.0-or-later"
default-run = "itsbinotstraight"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
rust_twitter_bot_lib = "0.1.2"
serde = "1.0.147"
unicode-normalization = "0.1.22"
