[package]
name = "itsbinotstraight"
version = "0.1.0"
authors = ["Lucas Werkmeister <mail@lucaswerkmeister.de>"]
edition = "2024"
homepage = "https://fox.nexus/@ItsBiNotStraight"
repository = "https://github.com/lucaswerkmeister/itsbinotstraight/"
license = "AGPL-3.0-or-later"
default-run = "itsbinotstraight"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
unicode-normalization = "0.1.22"
